--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,6 @@
 {% load extras %}
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +44,7 @@
             </div>
             {% endfor %}
             {% endif %}
-            <div class="mb-3 d-flex flex-column" style="min-height: 80vh;"> 
+            <div class="d-flex flex-column" style="min-height: 80vh;"> 
             {% block content %}
             {% endblock content %}
             </div>
@@ -125,68 +124,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>
         {% endif %}
         <script src="{% static 'js/base.js' %}"></script>
-
         <script type="text/javascript">
-            $(window).scroll(function() {
-                if ($(document).scrollTop() > 80) {
-                    $('.navv').addClass('affix navbar-dark text-white').removeClass('navbar-light bg-light text-dark');
-                    $('#cartnav-mobile a').removeClass('btn-light').addClass('btn-dark');
-                    $('.navv #sidebarCollapse').addClass('bg-dark');
-                    $('.navv #sidebarCollapse span').addClass('bg-white');
-                } else {
-                    $('.navv').removeClass('affix navbar-dark text-white').addClass('navbar-light bg-light text-dark');
-                    $('#cartnav-mobile a').removeClass('btn-dark').addClass('btn-light');
-                    $('.navv #sidebarCollapse').removeClass('bg-dark');
-                    $('.navv #sidebarCollapse span').removeClass('bg-white');
-                }
-            });
-            $(document).ready(function () {
-                {% comment %} $("#sidebar").mCustomScrollbar({
-                    theme: "minimal"
-                }); {% endcomment %}
-                $('#sidebarCollapse').on('click', function () {
-                    // open sidebar
-                    $('#sidebar').addClass('active');
-                    // fade in the overlay
-                    $(this).addClass('active');
-                    $('#sidebarCollapsev').addClass('active');
-                    $('.overlayy').addClass('active');
-                    $('.collapse.in').addClass('in');
-                    $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-                });
-                $('#sidebarCollapsev, .overlayy').on('click', function () {
-                    // open sidebar
-                    $('#sidebar').removeClass('active');
-                    // fade in the overlay
-                    $(this).removeClass('active');
-                    $('#sidebarCollapse').removeClass('active');
-                    $('.overlayy').removeClass('active');
-                    
-                    $('.collapse.in').removeClass('in');
-                });
-                $('#COLLECTIONSSubmenu').on('show.bs.collapse', function () {
-                    $('.menu-data-toggle i').removeClass('fa-plus').addClass('fa-minus');
-                });
-                $('#COLLECTIONSSubmenu').parent().on('hide.bs.collapse', function () {
-                    $('.menu-data-toggle i').removeClass('fa-minus').addClass('fa-plus');
-                });
-                $('.list-group.desktop .list-group-item').hover(function() {
-                    $(this).find('.collapse').collapse('show');
-                    $(this).addClass('text-dark');
-                }, function() {
-                    $(this).find('.collapse').collapse('hide');
-                    $(this).removeClass('text-dark');
-                });
-                $(function(){
-                    setInterval(function(){
-                        var animationName = 'animate__animated animate__tada';
-                        var animationend = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
-                        $('.logo-logo').addClass(animationName).one(animationend, function(){
-                            $(this).removeClass(animationName);
-                        });
-                    }, 6000);
-                });
-            });
             const store = new Vuex.Store({
                 state: {
                     numItems: {{cart.get_length}},
