--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 <div class="container" id="index">
-    <div class="row border-bottom mb-5">
+    <div class="row border-bottom mb-4">
         <div class="col px-3">
             <p class="text-center font-weight-bold mb-4 h6">ORDERS ARE SHIPPED AS USUAL</p>
             <p class="mb-4 text-center">Despite challenges presented by COVID-19, our online store is still open, with orders shipped everyday.
@@ -137,7 +137,7 @@
             <div class="swiper-pagination swiper-pagination-bullets d-md-none d-flex justify-content-start"></div>
         </div>
     </div>
-    <div class="row mb-4 pb-4 no-gutters new-arrivals">
+    <div class="row mb-4 no-gutters new-arrivals">
         <span class="text-uppercase mb-4 font-weight-light col-12">NEW ARRIVALS</span>
         <div
             class="swiper mx-0 pb-4 col-12"
