--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -48,7 +48,7 @@
 {% endblock style %}
 {% block content %}
 <div id="trouserappdetail" class="container">
-    <div v-if="has_content">
+    <div v-if="has_content" class="mb-4">
         <div class="row no-gutters justify-content-between">
             <div class="col-12 col-md-5 order-0" style="min-height:448px;">
                 <div
@@ -82,7 +82,7 @@
                 </div>
                 <div class="my-4 font-weight-bold d-block" style="min-height:174px;">
                     <transition enter-active-class="animate__animated animate__fadeIn">
-                        <div v-if="!changeText">
+                        <div v-if="!changeText" class="text-monospace">
                             <p> [[ selected_trouser.color ]]</p>
                             <p class=""> [[ name ]]</p>
                             <p class="mb-0"> [[ selected_trouser.price|currency ]]</p>
@@ -104,7 +104,7 @@
             <div class="my-3 my-md-auto mx-0 col-md-6 order-3 order-md-3">
                 <h5 class="text-uppercase font-weight-bold">you might also like</h5>
                 <div
-                    class="swiper pb-5 h-100"
+                    class="swiper pb-4 h-100"
                     v-swiper:swiper="swiperOptions"
                     @click-slide="onSwiperClickSlide"
                     @slide-change-transition-start="onSwiperSlideChangeTransitionStart"
@@ -115,9 +115,9 @@
                                 <a :href="trouser.url"><img :data-src="trouser.first_variant.first_image.file" class="swiper-lazy img-fluid img-responsive mx-auto card-img-top"></a>
                                 <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
                             </div>
-                            <div class="card-body py-0">
-                                <h5 class="card-title text-center small">[[ trouser.name ]]</h5>
-                                <span class="d-flex justify-content-center" style="font-size:10px;font-weight:600;">
+                            <div class="card-body text-monospace py-0">
+                                <h5 class="card-title text-center mb-0 small">[[ trouser.name ]]</h5>
+                                <span class="d-flex justify-content-center" style="font-size:10px;">
                                     <del class="card-text text-danger" v-if="trouser.first_variant.old_price"></del>
                                     <p class="align-text-bottom card-text font-weight-bolder">&nbsp;[[ trouser.first_variant.price|currency ]]</p>
                                 </span>
@@ -150,11 +150,6 @@
 {% endif %}
 <script src="{% static 'js/vue-awesome-swiper.js' %}"></script>
 <script>
-    const formatter = new Intl.NumberFormat('en-US', {
-                                        style: 'currency',
-                                        currency: 'NGN', 
-                                        minimumFractionDigits: 2
-                                    })
     Vue.use(VueAwesomeSwiper)
     const trouserappdetail = new Vue({
         delimiters: ['[[', ']]'],
